# mkv-auto-merger

./: .copier-answers.yml  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
scripts/: lint.sh  mkv-auto-merge.py  setup.sh  test.sh
src/mkv_auto_merger/: __init__.py
tests/: smoke.sh  test_mkv_auto_merge_script.py  test_smoke.py
