[project]
name = "mkv-auto-merger"
version = "0.1.0"
description = "Automated Python script for merging MKV video with dubbed audio"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Nikitid" }
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
